--- a/rearranging-equations/qs.html
+++ b/rearranging-equations/qs.html
@@ -36,7 +36,8 @@
 
             <!-- Question 1 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">1. $x + y = 12$</h3>
+                <h3 class="text-xl font-semibold mb-2">1.</h3>
+                <p class="question-body-text">$x + y = 12$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -51,7 +52,8 @@
 
             <!-- Question 2 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">2. $5x - 4 = y$</h3>
+                <h3 class="text-xl font-semibold mb-2">2.</h3>
+                <p class="question-body-text">$5x - 4 = y$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -68,7 +70,8 @@
 
             <!-- Question 3 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">3. $ax - 3by = 9$</h3>
+                <h3 class="text-xl font-semibold mb-2">3.</h3>
+                <p class="question-body-text">$ax - 3by = 9$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -85,7 +88,8 @@
 
             <!-- Question 4 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">4. $y = mx + c$</h3>
+                <h3 class="text-xl font-semibold mb-2">4.</h3>
+                <p class="question-body-text">$y = mx + c$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -102,7 +106,8 @@
 
             <!-- Question 5 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">5. $2 + 5xy = 6$</h3>
+                <h3 class="text-xl font-semibold mb-2">5.</h3>
+                <p class="question-body-text">$2 + 5xy = 6$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -120,7 +125,8 @@
 
             <!-- Question 6 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">6. $9x + 6y = 4x + 1$</h3>
+                <h3 class="text-xl font-semibold mb-2">6.</h3>
+                <p class="question-body-text">$9x + 6y = 4x + 1$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -145,7 +151,8 @@
 
             <!-- Question 7 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">7. $ax + by = 4x + 1$</h3>
+                <h3 class="text-xl font-semibold mb-2">7.</h3>
+                <p class="question-body-text">$ax + by = 4x + 1$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -166,7 +173,8 @@
 
             <!-- Question 8 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">8. $ax - by = bx - 8$</h3>
+                <h3 class="text-xl font-semibold mb-2">8.</h3>
+                <p class="question-body-text">$ax - by = bx - 8$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -187,7 +195,8 @@
 
             <!-- Question 9 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">9. $\dfrac{2ty + mx}{ty - mx} = 1$</h3>
+                <h3 class="text-xl font-semibold mb-2">9.</h3>
+                <p class="question-body-text">$\dfrac{2ty + mx}{ty - mx} = 1$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -204,12 +213,13 @@
                         <p>Divide by $2m$:</p>
                         $$ x = \frac{-ty}{2m} $$
                     </div>
-                ></div>
+                </div>
             </div>
 
             <!-- Question 10 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">10. $\dfrac{ty + mx}{ty - 3mx} = k$</h3>
+                <h3 class="text-xl font-semibold mb-2">10.</h3>
+                <p class="question-body-text">$\dfrac{ty + mx}{ty - 3mx} = k$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -235,7 +245,8 @@
 
             <!-- Question 11 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">11. $9x^2 = 4y$</h3>
+                <h3 class="text-xl font-semibold mb-2">11.</h3>
+                <p class="question-body-text">$9x^2 = 4y$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -254,7 +265,8 @@
 
             <!-- Question 12 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">12. $x^3 - 5m = t$</h3>
+                <h3 class="text-xl font-semibold mb-2">12.</h3>
+                <p class="question-body-text">$x^3 - 5m = t$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -271,7 +283,8 @@
 
             <!-- Question 13 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">13. $x^2 - 2x = 15$</h3>
+                <h3 class="text-xl font-semibold mb-2">13.</h3>
+                <p class="question-body-text">$x^2 - 2x = 15$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -297,7 +310,8 @@
 
             <!-- Question 14 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">14. $x^2 = 2 - qx$</h3>
+                <h3 class="text-xl font-semibold mb-2">14.</h3>
+                <p class="question-body-text">$x^2 = 2 - qx$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -315,7 +329,8 @@
 
             <!-- Question 15 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">15. $x^2 - 8 = kx$</h3>
+                <h3 class="text-xl font-semibold mb-2">15.</h3>
+                <p class="question-body-text">$x^2 - 8 = kx$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -369,7 +384,8 @@
 
             <!-- Practice Problem 1 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">1. $x^{\frac{3}{4}} = y^{\frac{1}{2}}$</h3>
+                <h3 class="text-xl font-semibold mb-2">1.</h3>
+                <p class="question-body-text">$x^{\frac{3}{4}} = y^{\frac{1}{2}}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -387,7 +403,8 @@
 
             <!-- Practice Problem 2 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">2. $x^{\frac{3}{4}} = y^{\frac{1}{2}} - 2$</h3>
+                <h3 class="text-xl font-semibold mb-2">2.</h3>
+                <p class="question-body-text">$x^{\frac{3}{4}} = y^{\frac{1}{2}} - 2$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -403,7 +420,8 @@
 
             <!-- Practice Problem 3 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">3. $5x^8 - y = 0$</h3>
+                <h3 class="text-xl font-semibold mb-2">3.</h3>
+                <p class="question-body-text">$5x^8 - y = 0$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -422,7 +440,8 @@
 
             <!-- Practice Problem 4 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">4. $x^{\frac{3}{4}} y = 8my$</h3>
+                <h3 class="text-xl font-semibold mb-2">4.</h3>
+                <p class="question-body-text">$x^{\frac{3}{4}} y = 8my$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -434,6 +453,7 @@
                         <p>Raise both sides to the power of $\frac{4}{3}$:</p>
                         $$ (x^{\frac{3}{4}})^{\frac{4}{3}} = (8m)^{\frac{4}{3}} $$
                         $$ x = 8^{\frac{4}{3}} m^{\frac{4}{3}} $$
+                        $$ x = (\sqrt[3]{8})^4 m^{\frac{4}{3}} $$
                         $$ x = 2^4 m^{\frac{4}{3}} $$
                         $$ x = 16 m^{\frac{4}{3}} $$
                     </div>
@@ -442,7 +462,8 @@
 
             <!-- Practice Problem 5 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">5. $2x^{2.5} = 64$</h3>
+                <h3 class="text-xl font-semibold mb-2">5.</h3>
+                <p class="question-body-text">$2x^{2.5} = 64$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -464,7 +485,8 @@
 
             <!-- Practice Problem 6 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">6. $x^2 y^3 x^5 y^2 = a$</h3>
+                <h3 class="text-xl font-semibold mb-2">6.</h3>
+                <p class="question-body-text">$x^2 y^3 x^5 y^2 = a$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -484,7 +506,8 @@
 
             <!-- Practice Problem 7 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">7. $0.5 x^{-0.5} y^{-0.5} \times 0.5 x^{-0.5} y^{0.5} = 4$</h3>
+                <h3 class="text-xl font-semibold mb-2">7.</h3>
+                <p class="question-body-text">$0.5 x^{-0.5} y^{-0.5} \times 0.5 x^{-0.5} y^{0.5} = 4$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -511,7 +534,8 @@
 
             <!-- Practice Problem 8 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">8. $0.8 y^{-0.2} x^{0.2} \times 0.2 y^{0.8} x^{-0.8} = 10$</h3>
+                <h3 class="text-xl font-semibold mb-2">8.</h3>
+                <p class="question-body-text">$0.8 y^{-0.2} x^{0.2} \times 0.2 y^{0.8} x^{-0.8} = 10$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -540,7 +564,8 @@
 
             <!-- Practice Problem 9 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">9. $\dfrac{\alpha y^{\alpha - 1} x^{\beta}}{\beta y^{\alpha} x^{\beta - 1}} = k$</h3>
+                <h3 class="text-xl font-semibold mb-2">9.</h3>
+                <p class="question-body-text">$\dfrac{\alpha y^{\alpha - 1} x^{\beta}}{\beta y^{\alpha} x^{\beta - 1}} = k$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -570,7 +595,7 @@
     </footer>
 
     <script>
-        // Function to load external HTML content
+        // Function to load external HTML content (navbar)
         async function loadNavbar() {
             try {
                 const response = await fetch('../assets/navbar.html');
@@ -600,10 +625,7 @@
                 // IMPORTANT: Tell MathJax to typeset the content when it becomes visible
                 try {
                     if (typeof MathJax !== 'undefined') {
-                        console.log("MathJax: Typesetting content on expand for:", content);
                         MathJax.typesetPromise([content]);
-                    } else {
-                        console.warn("MathJax is not defined when trying to typeset on expand.");
                     }
                 } catch (error) {
                     console.error("MathJax typesetting error on expand:", error);
@@ -617,22 +639,13 @@
         // Initial MathJax typesetting for any math visible on page load (e.g., in questions)
         // Load navbar and then typeset MathJax after the DOM is fully loaded.
         document.addEventListener('DOMContentLoaded', function() {
-            console.log("DOMContentLoaded fired. Loading navbar and attempting initial MathJax typesetting.");
             loadNavbar().then(() => {
                 try {
                     if (typeof MathJax !== 'undefined') {
-                        MathJax.typesetPromise()
-                            .then(() => {
-                                console.log("MathJax: Initial typesetting complete.");
-                            })
-                            .catch((error) => {
-                                console.error("MathJax: Initial typesetting failed:", error);
-                            });
-                    } else {
-                        console.warn("MathJax is not defined on DOMContentLoaded. Check script loading.");
+                        MathJax.typesetPromise();
                     }
                 } catch (error) {
-                    console.error("MathJax initial typesetting error (outside promise):", error);
+                    console.error("MathJax initial typesetting error:", error);
                 }
             });
         });
