--- a/differentiation-rules/qs.html
+++ b/differentiation-rules/qs.html
@@ -38,7 +38,8 @@
 
             <!-- Question 1 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">1. $y=5x^4$</h3>
+                <h3 class="text-xl font-semibold mb-2">1.</h3>
+                <p class="question-body-text">$y=5x^4$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -52,7 +53,8 @@
 
             <!-- Question 2 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">2. $y=7x^2$</h3>
+                <h3 class="text-xl font-semibold mb-2">2.</h3>
+                <p class="question-body-text">$y=7x^2$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -66,7 +68,8 @@
 
             <!-- Question 3 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">3. $y=\frac{2}{3}x^6$</h3>
+                <h3 class="text-xl font-semibold mb-2">3.</h3>
+                <p class="question-body-text">$y=\frac{2}{3}x^6$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -88,7 +91,8 @@
 
             <!-- Question 4 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">4. $y=\frac{3x^3}{x^5}$</h3>
+                <h3 class="text-xl font-semibold mb-2">4.</h3>
+                <p class="question-body-text">$y=\frac{3x^3}{x^5}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -103,7 +107,8 @@
 
             <!-- Question 5 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">5. $y=\frac{10}{x^2}$</h3>
+                <h3 class="text-xl font-semibold mb-2">5.</h3>
+                <p class="question-body-text">$y=\frac{10}{x^2}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -118,7 +123,8 @@
 
             <!-- Question 6 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">6. $y=2x^{\frac{2}{3}}$</h3>
+                <h3 class="text-xl font-semibold mb-2">6.</h3>
+                <p class="question-body-text">$y=2x^{\frac{2}{3}}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -132,7 +138,8 @@
 
             <!-- Question 7 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">7. $y=4\sqrt{x}$</h3>
+                <h3 class="text-xl font-semibold mb-2">7.</h3>
+                <p class="question-body-text">$y=4\sqrt{x}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -147,7 +154,8 @@
 
             <!-- Question 8 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">8. $y=\frac{2}{3x^2}$</h3>
+                <h3 class="text-xl font-semibold mb-2">8.</h3>
+                <p class="question-body-text">$y=\frac{2}{3x^2}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -162,7 +170,8 @@
 
             <!-- Question 9 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">9. $y=\frac{10}{x}$</h3>
+                <h3 class="text-xl font-semibold mb-2">9.</h3>
+                <p class="question-body-text">$y=\frac{10}{x}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -182,7 +191,8 @@
 
             <!-- Question 10 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">10. $y=5x^2+4x+3$</h3>
+                <h3 class="text-xl font-semibold mb-2">10.</h3>
+                <p class="question-body-text">$y=5x^2+4x+3$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -196,7 +206,8 @@
 
             <!-- Question 11 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">11. $y=x^4-2x^{-5}+\frac{1}{x}$</h3>
+                <h3 class="text-xl font-semibold mb-2">11.</h3>
+                <p class="question-body-text">$y=x^4-2x^{-5}+\frac{1}{x}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -210,7 +221,8 @@
 
             <!-- Question 12 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">12. $y=1+2\sqrt{x}+\frac{2}{5x}+\frac{3}{4x^2}+\frac{5}{2x^3}$</h3>
+                <h3 class="text-xl font-semibold mb-2">12.</h3>
+                <p class="question-body-text">$y=1+2\sqrt{x}+\frac{2}{5x}+\frac{3}{4x^2}+\frac{5}{2x^3}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -233,7 +245,8 @@
 
             <!-- Question 13 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">1. $y=5e^x$</h3>
+                <h3 class="text-xl font-semibold mb-2">13.</h3>
+                <p class="question-body-text">$y=5e^x$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -256,7 +269,8 @@
 
             <!-- Question 14 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">1. $y=5\ln x$</h3>
+                <h3 class="text-xl font-semibold mb-2">14.</h3>
+                <p class="question-body-text">$y=5\ln x$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -270,7 +284,8 @@
 
             <!-- Question 15 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">2. $y=\frac{\ln x}{2}-3e^x$</h3>
+                <h3 class="text-xl font-semibold mb-2">15.</h3>
+                <p class="question-body-text">$y=\frac{\ln x}{2}-3e^x$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -290,7 +305,8 @@
 
             <!-- Question 16 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">3. $y=\ln 4x$</h3>
+                <h3 class="text-xl font-semibold mb-2">16.</h3>
+                <p class="question-body-text">$y=\ln 4x$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -305,7 +321,8 @@
 
             <!-- Question 17 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">4. $y=\ln 0.443x$</h3>
+                <h3 class="text-xl font-semibold mb-2">17.</h3>
+                <p class="question-body-text">$y=\ln 0.443x$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -320,7 +337,8 @@
 
             <!-- Question 18 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">5. $y=\ln \frac{2}{x}$</h3>
+                <h3 class="text-xl font-semibold mb-2">18.</h3>
+                <p class="question-body-text">$y=\ln \frac{2}{x}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -335,7 +353,8 @@
 
             <!-- Question 19 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">6. $y=\ln x^{10}$</h3>
+                <h3 class="text-xl font-semibold mb-2">19.</h3>
+                <p class="question-body-text">$y=\ln x^{10}$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -350,7 +369,8 @@
 
             <!-- Question 20 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">7. $y=6\ln \frac{1}{2}x$</h3>
+                <h3 class="text-xl font-semibold mb-2">20.</h3>
+                <p class="question-body-text">$y=6\ln \frac{1}{2}x$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -372,7 +392,8 @@
 
             <!-- Question 21 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">1. $y=5x^3+x^2-4x+1+3e^x+\ln 2x \quad \frac{dy}{dx}=$</h3>
+                <h3 class="text-xl font-semibold mb-2">21.</h3>
+                <p class="question-body-text">$y=5x^3+x^2-4x+1+3e^x+\ln 2x \quad \frac{dy}{dx}=$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -386,7 +407,8 @@
 
             <!-- Question 22 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">2. $y=2x+5\sqrt{x}-\frac{4}{x}+\frac{3}{x^2} \quad \frac{dy}{dx}=$</h3>
+                <h3 class="text-xl font-semibold mb-2">22.</h3>
+                <p class="question-body-text">$y=2x+5\sqrt{x}-\frac{4}{x}+\frac{3}{x^2} \quad \frac{dy}{dx}=$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -400,7 +422,8 @@
 
             <!-- Question 23 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">3. $y=5t^2-2t^{\frac{3}{4}}+6\ln 0.1t \quad \frac{dy}{dt}=$</h3>
+                <h3 class="text-xl font-semibold mb-2">23.</h3>
+                <p class="question-body-text">$y=5t^2-2t^{\frac{3}{4}}+6\ln 0.1t \quad \frac{dy}{dt}=$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -414,7 +437,8 @@
 
             <!-- Question 24 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">4. $P=6e^n-4+\frac{5}{2}n-\frac{6}{\sqrt{n}} \quad \frac{dP}{dn}=$</h3>
+                <h3 class="text-xl font-semibold mb-2">24.</h3>
+                <p class="question-body-text">$P=6e^n-4+\frac{5}{2}n-\frac{6}{\sqrt{n}} \quad \frac{dP}{dn}=$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -428,7 +452,8 @@
 
             <!-- Question 25 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">5. $G=5s^2(3s-4) \quad \frac{dG}{ds}=$</h3>
+                <h3 class="text-xl font-semibold mb-2">25.</h3>
+                <p class="question-body-text">$G=5s^2(3s-4) \quad \frac{dG}{ds}=$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -445,7 +470,8 @@
 
             <!-- Question 26 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">6. $y=5x^2-12x+2, \quad x=2$</h3>
+                <h3 class="text-xl font-semibold mb-2">26.</h3>
+                <p class="question-body-text">$y=5x^2-12x+2, \quad x=2$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -461,7 +487,8 @@
 
             <!-- Question 27 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">7. $y=4x^3+x+10, \quad x=-1$</h3>
+                <h3 class="text-xl font-semibold mb-2">27.</h3>
+                <p class="question-body-text">$y=4x^3+x+10, \quad x=-1$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -477,7 +504,8 @@
 
             <!-- Question 28 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">8. $y=x^2+5x-1, \quad x=-2.5$</h3>
+                <h3 class="text-xl font-semibold mb-2">28.</h3>
+                <p class="question-body-text">$y=x^2+5x-1, \quad x=-2.5$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -493,7 +521,8 @@
 
             <!-- Question 29 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">9. $y=4e^x-10\sqrt{x}, \quad x=2$</h3>
+                <h3 class="text-xl font-semibold mb-2">29.</h3>
+                <p class="question-body-text">$y=4e^x-10\sqrt{x}, \quad x=2$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -509,7 +538,8 @@
 
             <!-- Question 30 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">10. $y=5-\frac{5}{x}+\frac{5}{x^2}, \quad x=1$</h3>
+                <h3 class="text-xl font-semibold mb-2">30.</h3>
+                <p class="question-body-text">$y=5-\frac{5}{x}+\frac{5}{x^2}, \quad x=1$</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
