--- a/differentiation-chain-rule/qs.html
+++ b/differentiation-chain-rule/qs.html
@@ -43,13 +43,14 @@
             $$ \frac{dy}{dx} = 4(3x^2 + 5)^3 \cdot 6x = 24x(3x^2 + 5)^3 $$
             <p class="mt-4">For the example above:</p>
             <p>Inner: \(u = 3x^2 + 5 \quad \Rightarrow \quad \frac{du}{dx} = 6x\)</p>
-            <p>Outer: \(y = u^4 \quad \Rightarrow \quad \frac{dy}{du} = 4u^3\)</p>
-            <p>\(\Rightarrow \frac{dy}{dx} = 4u^3 \cdot 6x = 24x(3x^2 + 5)^3\)</p>
+            <p>Outer: \(y = e^u \quad \Rightarrow \quad \frac{dy}{du} = e^u\)</p>
+            <p>\(\Rightarrow \frac{dy}{dx} = e^{2x^2 + 1} \cdot 4x\)</p>
             <p class="mt-8 mb-4">Find the derivative of:</p>
 
             <!-- Question 1 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">1. \(y = (4x^2 + 3)^5\)</h3>
+                <h3 class="text-xl font-semibold mb-2">1.</h3>
+                <p class="question-body-text">\(y = (4x^2 + 3)^5\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -65,7 +66,8 @@
 
             <!-- Question 2 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">2. \(y = (7x^3 + 2)^4\)</h3>
+                <h3 class="text-xl font-semibold mb-2">2.</h3>
+                <p class="question-body-text">\(y = (7x^3 + 2)^4\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -81,7 +83,8 @@
 
             <!-- Question 3 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">3. \(y = (5x^2 + x)^3\)</h3>
+                <h3 class="text-xl font-semibold mb-2">3.</h3>
+                <p class="question-body-text">\(y = (5x^2 + x)^3\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -97,7 +100,8 @@
 
             <!-- Question 4 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">4. \(y = (1 - 2x)^6\)</h3>
+                <h3 class="text-xl font-semibold mb-2">4.</h3>
+                <p class="question-body-text">\(y = (1 - 2x)^6\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -113,7 +117,8 @@
 
             <!-- Question 5 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">5. \(y = (2x - 3)^7\)</h3>
+                <h3 class="text-xl font-semibold mb-2">5.</h3>
+                <p class="question-body-text">\(y = (2x - 3)^7\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -129,7 +134,8 @@
 
             <!-- Question 6 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">6. \(y = (x^2 + 5x - 3)^8\)</h3>
+                <h3 class="text-xl font-semibold mb-2">6.</h3>
+                <p class="question-body-text">\(y = (x^2 + 5x - 3)^8\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -145,7 +151,8 @@
 
             <!-- Question 7 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">7. \(y = (4x^3 - x^2 + 2)^5\)</h3>
+                <h3 class="text-xl font-semibold mb-2">7.</h3>
+                <p class="question-body-text">\(y = (4x^3 - x^2 + 2)^5\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -179,7 +186,8 @@
 
             <!-- Question 8 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">8. \(y = e^{3x^2 + 4}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">8.</h3>
+                <p class="question-body-text">\(y = e^{3x^2 + 4}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -195,7 +203,8 @@
 
             <!-- Question 9 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">9. \(y = e^{x^3 + 1}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">9.</h3>
+                <p class="question-body-text">\(y = e^{x^3 + 1}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -210,7 +219,8 @@
 
             <!-- Question 10 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">10. \(y = e^{5x^4 + 2x}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">10.</h3>
+                <p class="question-body-text">\(y = e^{5x^4 + 2x}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -225,7 +235,8 @@
 
             <!-- Question 11 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">11. \(y = e^{7x - 3}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">11.</h3>
+                <p class="question-body-text">\(y = e^{7x - 3}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -240,7 +251,8 @@
 
             <!-- Question 12 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">12. \(y = e^{x^2 - 4x + 1}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">12.</h3>
+                <p class="question-body-text">\(y = e^{x^2 - 4x + 1}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -255,7 +267,8 @@
 
             <!-- Question 13 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">13. \(y = e^{x^5 - x^2 + 3}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">13.</h3>
+                <p class="question-body-text">\(y = e^{x^5 - x^2 + 3}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -270,7 +283,8 @@
 
             <!-- Question 14 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">14. \(y = e^{2x^3 - x + 4}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">14.</h3>
+                <p class="question-body-text">\(y = e^{2x^3 - x + 4}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -292,7 +306,8 @@
 
             <!-- Question 15 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">15. \(y = (5x^2 + 4)^3\)</h3>
+                <h3 class="text-xl font-semibold mb-2">15.</h3>
+                <p class="question-body-text">\(y = (5x^2 + 4)^3\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -307,7 +322,8 @@
 
             <!-- Question 16 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">16. \(y = e^{x^2 + 4x + 2}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">16.</h3>
+                <p class="question-body-text">\(y = e^{x^2 + 4x + 2}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -322,7 +338,8 @@
 
             <!-- Question 17 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">17. \(y = (2x^3 - x^2 + x)^6\)</h3>
+                <h3 class="text-xl font-semibold mb-2">17.</h3>
+                <p class="question-body-text">\(y = (2x^3 - x^2 + x)^6\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -337,7 +354,8 @@
 
             <!-- Question 18 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">18. \(y = e^{4x^3 - x^2 + x}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">18.</h3>
+                <p class="question-body-text">\(y = e^{4x^3 - x^2 + x}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -352,7 +370,8 @@
 
             <!-- Question 19 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">19. \(y = (3x^2 + 1)^5\)</h3>
+                <h3 class="text-xl font-semibold mb-2">19.</h3>
+                <p class="question-body-text">\(y = (3x^2 + 1)^5\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
@@ -367,7 +386,8 @@
 
             <!-- Question 20 -->
             <div class="question-block mb-8">
-                <h3 class="text-xl font-semibold mb-2">20. \(y = e^{x^4 + 5x}\)</h3>
+                <h3 class="text-xl font-semibold mb-2">20.</h3>
+                <p class="question-body-text">\(y = e^{x^4 + 5x}\)</p>
                 <div class="solution-container">
                     <div class="solution-header" onclick="toggleSolution(this)">
                         <span>Show Solution</span>
